oidc-ui/src/App.css
/* ... */
@media screen and (max-width: 768px) {
  .section-background .top_left_bg_logo,
  .section-background .top_right_bg_logo,
  .section-background .bottom_right_bg_logo,
  .section-background .bottom_left_bg_logo {
    display: none;
  }
}

@media screen and (max-width: 767px) {
  .multipurpose-login-card {
    border-radius: 0;
  }

  .signup-banner {
    margin: 0.75rem;
    border-radius: 0;
  }

  .login-text .container {
    max-width: none;
  }

  .section-background .container {
    min-height: auto;
  }

  .react-tooltip {
    width: 97vw !important;
  }
}

@media screen and (min-width: 768px) {
  .section-background .container {
    min-height: var(--login-background-min-height);
  }
}

.error-page-header {
  color: #2c2c2c;
  font:
    normal normal bold 24px/29px Inter,
    sans-serif;
  text-align: center;
  letter-spacing: 0px;
  padding-top: 36px;
}

.error-page-detail {
  color: #7b7b7b;
  font:
    normal normal normal 14px/20px Inter,
    sans-serif;
  text-align: center;
  letter-spacing: 0px;
  padding-top: 10px;
}

input[type='password']::-ms-reveal,
input[type='password']::-ms-clear {
  display: none;
}

@media screen and (max-width: 375px) {
  .pincode-input-text {
    width: 2em !important;
  }
}

@layer base {
  :root {
    --font-inter: var(--font-inter);
    --font-kantumruypro: var(--font-kantumruypro);

    --background: var(--background-color);
    --foreground: var(--foreground-color);

    --muted: var(--primary-muted);
    --muted-foreground: var(--primary-muted-foreground);
    --muted-neutral-gray: var(--primary-muted-neutral-gray);
    --muted-dark-gray: var(--primary-muted-dark-gray);
    --muted-light-gray: var(--primary-muted-light-gray);

    --popover: var(--primary-popover);
    --popover-foreground: var(--primary-popover-foreground);

    --border: var(--primary-border);
    --input: var(--primary-input);

    --card: var(--primary-card);
    --card-foreground: var(--primary-card-foreground);

    --step: var(--primary-step);
    --step-foreground: var(--primary-step-foreground);

    --primary: var(--primary-color);
    --primary-foreground: var(--primary-foreground-color);

    --secondary: var(--secondary-color);
    --secondary-foreground: var(--secondary-foreground-color);

    --accent: var(--accent-color);
    --accent-foreground: var(--accent-foreground-color);

    --destructive: var(--destructive-color);
    --destructive-foreground: var(--destructive-foreground-color);

    --ring: var(--ring-color);

    --radius: var(--radius-font-size);
  }

  .camdgc {
    --font-inter: var(--font-inter);
    --font-kantumruypro: var(--font-kantumruypro);

    --background: var(--background-color);
    --foreground: var(--foreground-color);

    --muted: var(--primary-muted);
    --muted-foreground: var(--primary-muted-foreground);
    --muted-neutral-gray: var(--primary-muted-neutral-gray);
    --muted-dark-gray: var(--primary-muted-dark-gray);
    --muted-light-gray: var(--primary-muted-light-gray);

    --popover: var(--primary-popover);
    --popover-foreground: var(--primary-popover-foreground);

    --border: var(--primary-border);
    --input: var(--primary-input);

    --card: var(--primary-card);
    --card-foreground: var(--primary-card-foreground);

    --step: var(--primary-step);
    --step-foreground: var(--primary-step-foreground);

    --primary: var(--primary-color);
    --primary-foreground: var(--primary-foreground-color);

    --secondary: var(--secondary-color);
    --secondary-foreground: var(--secondary-foreground-color);

    --accent: var(--accent-color);
    --accent-foreground: var(--accent-foreground-color);

    --destructive: var(--destructive-color);
    --destructive-foreground: var(--destructive-foreground-color);

    --ring: var(--ring-color);

    --radius: var(--radius-font-size);
  }
}

